--- a/install
+++ b/install
@@ -4,6 +4,6 @@ sudo pacman -S --no-confirm xorg nvidia
 git clone https://gitlab.com/dwt1/wallpapers
 yay -S dmscripts-git
 sudo pacman -S --no-confirm alacritty sddm i3 dmenu rofi picom nitrogen pcmanfm firefox pandoc trayer lxsession lxappearance arc-gtk-theme arc-icon-theme starship
-cp ~/dotfiles/.config/ ~
+cp -r ~/dotfiles/.config/ ~
 sudo systemctl enable sddm
 echo "now restart"
